Fix the grid column to avoid overlapping

--- a/cart.css
+++ b/cart.css
@@ -206,7 +206,7 @@
   
   .cart__item {
     display: grid;
-    grid-template-columns: 2rem 7rem 3rem auto 1rem auto auto;
+    grid-template-columns: 6rem 8.5rem 3rem auto 1rem auto auto ;
     justify-content: space-between;
     align-items: center;  
     text-align: center;
